Educate people about the finer qualities of beer in belgium

--- a/layouts/main.html
+++ b/layouts/main.html
@@ -106,7 +106,7 @@ end
               devroom_count = tracks.count { |t| t[:type] == 'devroom' }
 	      devroom_label = devroom_count > 0 ? "#{devroom_count} devrooms" : "devrooms"
               {
-                'beer' => '/practical/beer/',
+                'beer' => 'https://en.wikipedia.org/wiki/Beer_in_Belgium',
                 devroom_label => '/schedule/tracks/',
                 'open source' => 'https://en.wikipedia.org/wiki/Open-source_model',
                 '8000+ hackers' => nil,
