Fix homepage links

--- a/layouts/main.html
+++ b/layouts/main.html
@@ -118,7 +118,7 @@ end
                            if t
                              [ t.path, t[:title] ]
                            else
-                             [ '#', nil ]
+                             [ target, nil ]
                            end
                          else
                            [ '#', nil ]
