license: switch to CC BY 4.0 International
was: CC BY 2.0 BE

--- a/layouts/main.html
+++ b/layouts/main.html
@@ -45,7 +45,7 @@ end
     <meta name="DC.Format" content="text/html">
     <meta name="DC.Language" content="en">
     <meta name="DC.Subject" content="<%= conference()[:title] %>">
-    <meta name="DC.Rights" content="http://creativecommons.org/licenses/by-sa/2.0/be/">
+    <meta name="DC.Rights" content="https://creativecommons.org/licenses/by/4.0/">
     <meta property="og:title" content="<%= conference()[:title] %><% if @item[:title] %> - <%= @item[:title] %><% end %>">
     <meta property="og:type" content="website">
     <meta property="og:image" content="<%= conference()[:homepage] %><%= pathof('/assets/style/logo-gear/')[1..-1] %>">
@@ -182,9 +182,9 @@ end
         </div>
         <div class="license-info">
           <div class="license-info-logo"></div>
-          This work is licensed under the Creative Commons Attribution 2.0 Belgium Licence.<br>
+          This work is licensed under the Creative Commons Attribution 4.0 International.<br>
           To view a copy of this licence, visit
-          <a class="quiet" rel="license" href="http://creativecommons.org/licenses/by/2.0/be/deed.en">http://creativecommons.org/licenses/by/2.0/be/deed.en</a><br>
+          <a class="quiet" rel="license" href="https://creativecommons.org/licenses/by/4.0/deed.en">https://creativecommons.org/licenses/by/4.0/deed.en</a><br>
           or send a letter to Creative Commons, 444 Castro Street, Suite 900, Mountain View, California, 94041, USA.<br>
           All content such as talks and biographies is the sole responsibility of the speaker.
         </div>
