updated layouts to include the timezone of the events
Signed-off-by: Sebastian Schubert <basti@schubert.digital>

--- a/layouts/schedule/day.html
+++ b/layouts/schedule/day.html
@@ -22,8 +22,9 @@ xml.table(class: "timetable timetable-body table table-striped table-bordered ta
     xml.tr do
       xml.th(class: 'backlink') do
         xml.a(href: pathof('/'), title: 'Site root') do
-          xml << '&larr;&nbsp;/'
+          xml << '&larr;&nbsp;/ '
         end
+          xml << 'UTC+1'
       end
       rooms.map(&$to_room).each do |room|
         xml.th do
