--- a/layouts/schedule/room.html
+++ b/layouts/schedule/room.html
@@ -41,9 +41,9 @@
   <thead>
     <tr>
       <th style="width: 8em;">Day</th>
-      <th style="width: 4em; text-align: right;">Start</th>
+      <th style="width: 7em; text-align: right;">Start (UTC+1)</th>
       <th style="width: 1em;"></th>
-      <th style="width: 4em; text-align: left;">End</th>
+      <th style="width: 7em; text-align: left;">End (UTC+1)</th>
       <th>Track(s)</th>
     </tr>
   </thead>
@@ -182,8 +182,8 @@
             <th colspan="2">Title</th>
             <th>Speakers</th>
             <th>Track</th>
-            <th>Start</th>
-            <th>End</th>
+            <th>Start (UTC+1)</th>
+            <th>End (UTC+1)</th>
         </tr>
     </thead>
     <tbody>
