--- a/layouts/schedule/speaker.html
+++ b/layouts/schedule/speaker.html
@@ -37,8 +37,8 @@
             <th>Day</th>
             <th>Room</th>
             <th>Track</th>
-            <th>Start</th>
-            <th>End</th>
+            <th>Start (UTC+1)</th>
+            <th>End (UTC+1)</th>
         </tr>
     </thead>
     <tbody>
