--- a/layouts/schedule/track.html
+++ b/layouts/schedule/track.html
@@ -179,8 +179,8 @@
             <% if item[:rooms].size > 1 %>
             <th>Room</th>
             <% end %>
-            <th>Start</th>
-            <th>End</th>
+            <th>Start (UTC+1)</th>
+            <th>End (UTC+1)</th>
         </tr>
       </thead>
       <tbody>
