--- a/layouts/schedule/event.html
+++ b/layouts/schedule/event.html
@@ -9,6 +9,15 @@
   <li><i class="icon-calendar"></i> <strong>Day</strong>: <%= l day(item[:day]) %></li>
   <li><i class="icon-play"></i> <strong>Start (UTC+1)</strong>: <%= ltt item, :start %></li>
   <li><i class="icon-stop"></i> <strong>End (UTC+1)</strong>: <%= ltt item, :end %></li>
+  <li>
+    <i class="icon-calendar"></i> <strong>Calendar:</strong>
+    <%=
+    [
+      { name: 'iCal', identifier: "/schedule/ical/event/#{item[:slug]}/" },
+      { name: 'xCal', identifier: "/schedule/xcal/event/#{item[:slug]}/" },
+    ].map{|cal| l(cal[:identifier], cal[:name], show_subtitle: false) }.join(", ")
+    %>
+  </li>
   <% if item[:live_video_link] %>
   <li id="live-stream-with-q-and-a" class="visible-desktop">
     <i class="icon-film"></i> <strong>Video only</strong>:
