--- a/layouts/schedule/event.html
+++ b/layouts/schedule/event.html
@@ -11,7 +11,7 @@
   <li><i class="icon-stop"></i> <strong>End (UTC+1)</strong>: <%= ltt item, :end %></li>
   <% if item[:live_video_link] %>
   <li id="live-stream-with-q-and-a" class="visible-desktop">
-    <i class="icon-film"></i> <strong>Video only</strong>:
+    <i class="icon-film"></i> <strong>Room livestream</strong>:
     <a href="<%= item[:live_video_link] %>"><%= item[:room] %></a>
   </li>
   <% end %>
